Fixed bugs on mobile view.

--- a/static/scss/components/_direction-card.scss
+++ b/static/scss/components/_direction-card.scss
@@ -74,6 +74,7 @@
 
         @media screen and (max-width: $md) {
             height: 65px;
+            font-size: 22px;
         }
     }
 }
